<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickyClickyActivity">

    <Button
        android:id="@+id/clicky_A"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_A"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toTopOf="@id/clicky_D"
        app:layout_constraintEnd_toStartOf="@id/clicky_B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clicky_B"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_B"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toTopOf="@id/clicky_E"
        app:layout_constraintEnd_toStartOf="@id/clicky_C"
        app:layout_constraintStart_toEndOf="@id/clicky_A"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clicky_C"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_C"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toTopOf="@id/clicky_F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clicky_B"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clicky_D"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_D"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toStartOf="@id/clicky_E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clicky_A" />

    <Button
        android:id="@+id/clicky_E"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_E"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toTopOf="@id/clicky_TV"
        app:layout_constraintEnd_toStartOf="@id/clicky_F"
        app:layout_constraintStart_toEndOf="@id/clicky_D"
        app:layout_constraintTop_toBottomOf="@id/clicky_B" />

    <Button
        android:id="@+id/clicky_F"
        android:layout_width="@dimen/clicky_btn_sz"
        android:layout_height="@dimen/clicky_btn_sz"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClick"
        android:text="@string/clicky_F"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clicky_E"
        app:layout_constraintTop_toBottomOf="@id/clicky_C" />

    <TextView
        android:id="@+id/clicky_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/clicky_margin_sz"
        android:onClick="onClick"
        android:textSize="@dimen/clicky_text_sz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clicky_E" />


</androidx.constraintlayout.widget.ConstraintLayout>